Fix for IE search bar being cutoff

--- a/airbitz/airbitz/static/css/global-stylesheet.css
+++ b/airbitz/airbitz/static/css/global-stylesheet.css
@@ -123,10 +123,8 @@
 .typeahead,
 .tt-query,
 .tt-hint {
-  width: 200px;
-  height: 30px;
   padding: 8px 12px;
-  line-height: 30px;
+  line-height: 20px;
   border: 2px solid #ccc;
   -webkit-border-radius: 2px;
   -moz-border-radius: 2px;
