--- a/airbitz/airbitz/static/less/typeahead.less
+++ b/airbitz/airbitz/static/less/typeahead.less
@@ -1,10 +1,8 @@
 .typeahead,
 .tt-query,
 .tt-hint {
-    width: 200px;
-    height: 30px;
     padding: 8px 12px;
-    line-height: 30px;
+    line-height: 20px;
     border: 2px solid #ccc;
     -webkit-border-radius: 2px;
     -moz-border-radius: 2px;
@@ -40,7 +38,7 @@
             width: 200px;
         }
     }
-    
+
     .typeahead {
         background-color: #fff;
     }
